# sightrack

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  runner.py  turbo.json
.github/workflows/: codeql.yml
.husky/: commit-msg
backend/: package.json  pyproject.toml  requirements.txt  runner.py
backend/src/: cli.py  processor.py  server.py  utilities.py
backend/src/models/: landmark.py  landmarker.py  resnet.py  sixdof.py  yolo.py
document/guides/: install-nodejs.md  install-python.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.husky/: commit-msg  pre-commit
frontend/src/: index.html  local.html  remote.html  temp.html
frontend/src/assets/styles/: theme.css.ts  theme.ts
frontend/src/components/layouts/AppLayout/: index.tsx
frontend/src/components/molecules/DownloadSeriesButton/: index.tsx
frontend/src/components/molecules/FaceChart/: index.tsx
frontend/src/components/organisms/LocalModePanel/: index.tsx
frontend/src/components/organisms/RemoteModePanel/: index.tsx
frontend/src/components/pages/: App.tsx  index.tsx  local.tsx  remote.tsx  temp.tsx
frontend/src/components/views/AppView/: index.tsx
frontend/src/components/views/IndexView/: index.tsx
frontend/src/components/views/LocalView/: index.tsx
frontend/src/components/views/RemoteView/: index.tsx
frontend/src/components/views/TempView/: index.tsx
frontend/src/types/: frame.ts
src/: cli.py  processor.py
src/models/: sixdof.py
