[tool.poetry]
name = "sightrack"
version = "0.0.1"
description = "Inference of where people are looking from 360-degree video"
license = "WTFPL"
authors = ["Kerthical <kerthical@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mediapipe = "^0.10.8"
aiortc = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
